# approaching_almost_any_machine_learning_problem

./: .gitignore  README.md  p11_MNIST.ipynb  p23ff_kfolds.ipynb  pyproject.toml
example_project_cat_in_the_dat_ii/project/src/: create_folds.py
example_project_cat_in_the_dat_ii/project/src/models/random_forest/: feature_engineering.py  model.py
p73ff_arranging_with_cat_in_the_dat/project/: README.md
p73ff_arranging_with_cat_in_the_dat/project/notebooks/: Untitled.ipynb  overview.ipynb
p73ff_arranging_with_cat_in_the_dat/project/src/: config.py  create_folds.py  run.py  run.sh  run_training.py  run_training.sh  train.py
p73ff_arranging_with_cat_in_the_dat/project/src/models/: model.py
p73ff_arranging_with_cat_in_the_dat/project/src/models/logistic_regression/: feature_engineering.py
p73ff_arranging_with_cat_in_the_dat/project/src/models/random_forest/: feature_engineering.py  model.py
p73ff_arranging_with_cat_in_the_dat/project/src/models/tree/: feature_engineering.py  model.py
p73ff_arranging_with_cat_in_the_dat/project/src/saved_models/logistic_regression/: logistic_regression_fold_0.joblib  logistic_regression_fold_1.joblib  logistic_regression_fold_2.joblib  logistic_regression_fold_3.joblib  logistic_regression_fold_4.joblib
