[tool.poetry]
name = "approaching_almost_any_machine_learning_problem"
version = "0.1.0"
description = ""
authors = ["Wolfgang <wolfgang.spindeler@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
matplotlib = "^3.4.3"
numpy = "^1.21.2"
pandas = "^1.3.3"
seaborn = "^0.11.2"
scikit-learn = "^0.24.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
